syntax = "proto3";

package bazelbsp;

option java_package = "org.jetbrains.bazel.info";

message FileLocation {
  string relative_path = 1;
  bool is_source = 2;
  bool is_external = 3;
  string root_execution_path_fragment = 4;
}

message Dependency {
  enum DependencyType {
    COMPILE = 0;
    RUNTIME = 1;
  }

  string id = 1;
  DependencyType dependency_type = 2;
  bool exported = 3;
}

message JvmOutputs {
  repeated FileLocation binary_jars = 1;
  repeated FileLocation interface_jars = 2;
  repeated FileLocation source_jars = 3;
}

message JvmTargetInfo {
  repeated JvmOutputs jars = 1;
  repeated JvmOutputs generated_jars = 2;
  repeated string javac_opts = 6;
  repeated string jvm_flags = 7;
  string main_class = 8;
  repeated string args = 9;
  repeated FileLocation jdeps = 10;
  bool has_api_generating_plugins = 12;
}

message JavaToolchainInfo {
  string source_version = 1;
  string target_version = 2;
  FileLocation java_home = 3;
  FileLocation boot_classpath_java_home = 4;
}

message JavaRuntimeInfo {
  FileLocation java_home = 1;
}

message ScalaTargetInfo {
  repeated string scalac_opts = 1;
  repeated FileLocation compiler_classpath = 2;
  repeated FileLocation scalatest_classpath = 3;
}

message KotlincPluginOption {
  string plugin_id = 100;
  string option_value = 200;
}

message KotlincPluginInfo {
  repeated FileLocation plugin_jars = 100;
  repeated KotlincPluginOption kotlinc_plugin_options = 200;
}

message KotlinTargetInfo {
  string language_version = 100;
  string api_version = 200;
  repeated string associates = 300;
  repeated string kotlinc_opts = 400;
  repeated FileLocation stdlibs = 500;
  repeated KotlincPluginInfo kotlinc_plugin_infos = 600;
  string module_name = 700;
}

message PythonTargetInfo {
  FileLocation interpreter = 1;
  string version = 2;
  repeated string imports = 3;
  bool is_code_generator = 4;
  repeated FileLocation generated_sources = 5;
}

message GoTargetInfo {
  string import_path = 1;
  FileLocation sdk_home_path = 2;
  repeated FileLocation generated_sources = 3;
  repeated FileLocation generated_libraries = 4;
  repeated string library_labels = 5;
}

message ProtobufTargetInfo {
  repeated ProtobufSourceMapping source_mappings = 3;
}

message ProtobufSourceMapping {
  string import_path = 1;
  FileLocation proto_file = 2;
}

message TargetInfo {
  string id = 10;
  string kind = 20;
  repeated string tags = 30;
  repeated Dependency dependencies = 40;
  repeated FileLocation sources = 50;
  repeated FileLocation generated_sources = 51;
  repeated FileLocation resources = 60;
  map<string, string> env = 70;
  repeated string env_inherit = 80;
  bool executable = 90;
  string workspace_name = 100;
  JvmTargetInfo jvm_target_info = 1000;
  JavaToolchainInfo java_toolchain_info = 2000;
  JavaRuntimeInfo java_runtime_info = 3000;
  ScalaTargetInfo scala_target_info = 4000;
  KotlinTargetInfo kotlin_target_info = 7000;
  PythonTargetInfo python_target_info = 8000;
  GoTargetInfo go_target_info = 12000;
  ProtobufTargetInfo protobuf_target_info = 14000;
}
